--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -259,6 +259,9 @@
 		<DataTemplate x:Key="CompletedTemplateElapsedTime" DataType="viewmodel:EncodeResultViewModel">
 			<TextBlock Style="{DynamicResource TextBlockBaseStyle}" Text="{Binding TimeDisplay}" />
 		</DataTemplate>
+		<DataTemplate x:Key="CompletedTemplatePauseTime" DataType="viewmodel:EncodeResultViewModel">
+			<TextBlock Style="{DynamicResource TextBlockBaseStyle}" Text="{Binding PauseTimeDisplay}" />
+		</DataTemplate>
 		<DataTemplate x:Key="CompletedTemplateSize" DataType="viewmodel:EncodeResultViewModel">
 			<TextBlock Style="{DynamicResource TextBlockBaseStyle}" Text="{Binding OutputFileSize}" />
 		</DataTemplate>
@@ -267,6 +270,9 @@
 		</DataTemplate>
 		<DataTemplate x:Key="CompletedTemplatePercentOfSource" DataType="viewmodel:EncodeResultViewModel">
 			<TextBlock Style="{DynamicResource TextBlockBaseStyle}" Text="{Binding PercentOfSourceDisplay}" />
+		</DataTemplate>
+		<DataTemplate x:Key="CompletedTemplateVideoDuration" DataType="viewmodel:EncodeResultViewModel">
+			<TextBlock Style="{DynamicResource TextBlockBaseStyle}" Text="{Binding Job.DurationDisplay}" />
 		</DataTemplate>
 		<ContextMenu x:Key="CompletedItemContextMenu" d:DataContext="{d:DesignInstance viewmodel:EncodeResultViewModel}">
 			<MenuItem Command="{Binding Play}" Header="{x:Static res:MainRes.Play}">
