Added optional Average FPS column for the Completed tab.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -274,6 +274,9 @@
 		<DataTemplate x:Key="CompletedTemplateVideoDuration" DataType="viewmodel:EncodeResultViewModel">
 			<TextBlock Style="{DynamicResource TextBlockBaseStyle}" Text="{Binding Job.DurationDisplay}" />
 		</DataTemplate>
+		<DataTemplate x:Key="CompletedTemplateAverageFps" DataType="viewmodel:EncodeResultViewMode">
+			<TextBlock Style="{DynamicResource TextBlockBaseStyle}" Text="{Binding AverageFpsDisplay}" />
+		</DataTemplate>
 		<ContextMenu x:Key="CompletedItemContextMenu" d:DataContext="{d:DesignInstance viewmodel:EncodeResultViewModel}">
 			<MenuItem Command="{Binding Play}" Header="{x:Static res:MainRes.Play}">
 				<MenuItem.Icon>
